# meta-scheduler

./: .pre-commit-config.yaml  .pylintrc  README.md  config.yaml  pyproject.toml
backend/: app.py  routes.py  run.py  schemas.py
docker/: Dockerfile  docker-compose.yaml  grafana.json  prometheus.yml
frontend/: main.py
glogger/: pyproject.toml
glogger/glogger/: logger.py
meta_scheduler/: main.py  metrics.py  settings.py  temporal_client.py
meta_scheduler/models/: __init__.py  db.py  file.py  mql.py  opt.py
meta_scheduler/steps/: exec.py  parse.py  persiste_to_db.py  recv.py  step.py
meta_scheduler/utils/: command.py  db_session.py  logger.py  stepping.py
migrations/: env.py
migrations/versions/: 617dd8e51ee6_add_opt_result.py
strategy_examples/: macd.ex5  macd.mq5  macd.set
