[tool.poetry]
name = "meta-scheduler"
version = "0.1.0"
description = ""
authors = ["SmsS4 <smss.lite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
alembic = "1.10.3"
sqladmin = "0.10.1"
SQLAlchemy = "2.0.9"
dynaconf = "3.1.12"
glogger = {path = "glogger", develop=true}
temporalio = "^1.1.0"
xmltodict = "^0.13.0"
pydantic = "^1.10.7"
psycopg2 = "^2.9.6"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.0"
ipython = "8.12.0"
pre-commit = "3.2.2"
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
